--- a/index.css
+++ b/index.css
@@ -9,12 +9,12 @@ input {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
-    border: 1px solid #5f9341;
+    border: 1px solid #525a44;
     margin-bottom: 4px;
 }
 
 button {
-    background: #5f9341;
+    background: #ea83a5;
     color: white;
     padding: 10px 20px;
     border: 1px solid #5f9341;
